// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Component Icon variants filled should match snapshot 1`] = `
<div>
  <i
    class="material-icons  css-zif8ik-Icon"
  >
    accessibility
  </i>
</div>
`;

exports[`Icon Component Icon variants outlined should match snapshot 1`] = `
<div>
  <i
    class="material-icons-outlined  css-zif8ik-Icon"
  >
    accessibility
  </i>
</div>
`;

exports[`Icon Component Icon variants round should match snapshot 1`] = `
<div>
  <i
    class="material-icons-round  css-zif8ik-Icon"
  >
    accessibility
  </i>
</div>
`;

exports[`Icon Component Icon variants sharp should match snapshot 1`] = `
<div>
  <i
    class="material-icons-sharp  css-zif8ik-Icon"
  >
    accessibility
  </i>
</div>
`;

exports[`Icon Component Icon variants two-tone should match snapshot 1`] = `
<div>
  <i
    class="material-icons-two-tone  css-zif8ik-Icon"
  >
    accessibility
  </i>
</div>
`;

exports[`Icon Component Icon with tooltip Should render with tooltip component 1`] = `
<div>
  <div
    class="css-108m3ho-Tooltip"
  >
    <i
      class="material-icons  css-zif8ik-Icon"
    >
      accessibility
    </i>
  </div>
</div>
`;
